--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,9 @@
-FROM node:10.15.3-alpine
+FROM node:12.16.1-alpine
 
 
-ARG APP_ROOT=/opt/app
+ARG APP_ROOT=/srv/app
 ENV APP_ROOT=${APP_ROOT}
+ENV NODE_ENV production
 
 RUN mkdir /run/nginx
 RUN mkdir ${APP_ROOT}
@@ -17,27 +18,15 @@ RUN apk update && \
 
 COPY . ${APP_ROOT}
 
-
-RUN mkdir /etc/nginx/ssl
-ADD docker/supervisord.conf /etc/supervisord.conf
-ADD docker/nginx.conf /etc/nginx/nginx.conf
-# need rewrite default.conf
-ADD docker/bfclient.conf /etc/nginx/conf.d/default.conf
-COPY docker/ssl /etc/nginx/ssl
-
 RUN yarn install
-
-# Set environment variables
-ENV NODE_ENV production
-ENV NUXT_HOST 127.0.0.1
-ENV NUXT_PORT 3399
-
 RUN yarn build
 
+ADD docker/supervisord.conf /etc/supervisord.conf
+ADD docker/nginx.conf /etc/nginx/nginx.conf
+ADD docker/client.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 443 80
+EXPOSE 80
 
-#ENTRYPOINT ["/opt/app/docker/entrypoint.sh"]
 ENTRYPOINT ["/usr/bin/supervisord"]
 
               
