--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
     image: zkosta/api-tic-tac  
     ports:
       - "8778:80"
+    environment:
+      XDEBUG_REMOTE_HOST: 172.30.0.1   
     volumes:
-      - ./api:/app          
+      - ./api:/srv/app          
     networks:
       - tic_net
       
